--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/icons/favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>Penguin Fashion</title>
 </head>
 
 
 <body>
-    <header class="px-32 pb-32">
-        <nav class="flex justify-between items-center py-7">
+    <header class="px-8 pb-20 lg:px-32 lg:pb-32">
+        <nav class="flex justify-between  items-center py-7">
             <div class="logo-container">
                 <img class="h-9 object-cover" src="/assets/icons/logo.png" alt="">
             </div>
@@ -27,8 +28,8 @@
         </nav>
 
 
-        <div class="banner-container flex justify-between items-center gap-40">
-            <div class="banner-text w-5/12">
+        <div class="banner-container flex flex-col lg:flex-row justify-between items-center gap-10 lg:gap-40">
+            <div class="banner-text w-full lg:w-5/12 text-center lg:text-left">
                 <h1 class="uppercase text-5xl font-bold text-[#363958]">
 
                     <span class="text-[#FABE4C]">Be the
@@ -47,10 +48,162 @@
                     BUY
                     NOW</button>
             </div>
-            <div class="banner-image w-5/12">
-                <img class="w-full" src="assets/images/model.png" alt="">
+            <div class="banner-image w-full lg:w-5/12 flex justify-center">
+                <img class="w-9/12" src="assets/images/model.png" alt="">
             </div>
     </header>
+    <main>
+        <section class="womens-jacket px-8 pb-20 lg:px-32 lg:pb-32">
+            <h1 class="text-[#363958] font-extrabold uppercase text-3xl">Woman Jacket</h1>
+            <div class="card-container grid lg:grid-cols-3 gap-5">
+                <div class="card p-2 rounded-xl space-y-3">
+
+                    <div class="image-container bg-[#F1F1F1] p-2 rounded-xl justify-center flex items-center">
+                        <img class="w-9/12 " src="assets/images/jacket-1.png" alt="">
+                    </div>
+                    <div class="text-container space-y-5">
+                        <h2 class="text-[#363958] font-bold text-3xl">Yellow Coat Jacket</h2>
+                        <p class="text-[#3E3E3E] text-s">Lorem Ipsum is simply dummy text of the
+                            printing and typesetting industry.</p>
+                        <div class="cta-div flex justify-between items-center">
+                            <h2 class="text-[#FABE4C] text-5xl font-black">$234</h2>
+                            <button
+                                class="px-7 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg font-medium grid-col"><svg
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                </svg>
+                                BUY
+                                NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card p-2 rounded-xl space-y-3">
+
+                    <div class="image-container bg-[#F1F1F1] p-2 rounded-xl justify-center flex items-center">
+                        <img class="w-9/12 " src="assets/images/jacket-1.png" alt="">
+                    </div>
+                    <div class="text-container space-y-5">
+                        <h2 class="text-[#363958] font-bold text-3xl">Yellow Coat Jacket</h2>
+                        <p class="text-[#3E3E3E] text-s">Lorem Ipsum is simply dummy text of the
+                            printing and typesetting industry.</p>
+                        <div class="cta-div flex justify-between items-center">
+                            <h2 class="text-[#FABE4C] text-5xl font-black">$234</h2>
+                            <button
+                                class="px-7 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg font-medium grid-col"><svg
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                </svg>
+                                BUY
+                                NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card p-2 rounded-xl space-y-3">
+
+                    <div class="image-container bg-[#F1F1F1] p-2 rounded-xl justify-center flex items-center">
+                        <img class="w-9/12 " src="assets/images/jacket-1.png" alt="">
+                    </div>
+                    <div class="text-container space-y-5">
+                        <h2 class="text-[#363958] font-bold text-3xl">Yellow Coat Jacket</h2>
+                        <p class="text-[#3E3E3E] text-s">Lorem Ipsum is simply dummy text of the
+                            printing and typesetting industry.</p>
+                        <div class="cta-div flex justify-between items-center">
+                            <h2 class="text-[#FABE4C] text-5xl font-black">$234</h2>
+                            <button
+                                class="px-7 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg font-medium grid-col"><svg
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                </svg>
+                                BUY
+                                NOW</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section class="mans-jacket px-8 pb-20 lg:px-32 lg:pb-32">
+            <h1 class="text-[#363958] font-extrabold uppercase text-3xl">Man Jacket</h1>
+            <div class="card-container grid lg:grid-cols-3 gap-5">
+                <div class="card p-2 rounded-xl space-y-3">
+
+                    <div class="image-container bg-[#F1F1F1] p-2 rounded-xl justify-center flex items-center">
+                        <img class="w-9/12 " src="assets/images/jacket-1.png" alt="">
+                    </div>
+                    <div class="text-container space-y-5">
+                        <h2 class="text-[#363958] font-bold text-3xl">Yellow Coat Jacket</h2>
+                        <p class="text-[#3E3E3E] text-s">Lorem Ipsum is simply dummy text of the
+                            printing and typesetting industry.</p>
+                        <div class="cta-div flex justify-between items-center">
+                            <h2 class="text-[#FABE4C] text-5xl font-black">$234</h2>
+                            <button
+                                class="px-7 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg font-medium grid-col"><svg
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                </svg>
+                                BUY
+                                NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card p-2 rounded-xl space-y-3">
+
+                    <div class="image-container bg-[#F1F1F1] p-2 rounded-xl justify-center flex items-center">
+                        <img class="w-9/12 " src="assets/images/jacket-1.png" alt="">
+                    </div>
+                    <div class="text-container space-y-5">
+                        <h2 class="text-[#363958] font-bold text-3xl">Yellow Coat Jacket</h2>
+                        <p class="text-[#3E3E3E] text-s">Lorem Ipsum is simply dummy text of the
+                            printing and typesetting industry.</p>
+                        <div class="cta-div flex justify-between items-center">
+                            <h2 class="text-[#FABE4C] text-5xl font-black">$234</h2>
+                            <button
+                                class="px-7 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg font-medium grid-col"><svg
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                </svg>
+                                BUY
+                                NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card p-2 rounded-xl space-y-3">
+
+                    <div class="image-container bg-[#F1F1F1] p-2 rounded-xl justify-center flex items-center">
+                        <img class="w-9/12 " src="assets/images/jacket-1.png" alt="">
+                    </div>
+                    <div class="text-container space-y-5">
+                        <h2 class="text-[#363958] font-bold text-3xl">Yellow Coat Jacket</h2>
+                        <p class="text-[#3E3E3E] text-s">Lorem Ipsum is simply dummy text of the
+                            printing and typesetting industry.</p>
+                        <div class="cta-div flex justify-between items-center">
+                            <h2 class="text-[#FABE4C] text-5xl font-black">$234</h2>
+                            <button
+                                class="px-7 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] text-white rounded-lg font-medium grid-col"><svg
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                </svg>
+                                BUY
+                                NOW</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
