--- a/index.html
+++ b/index.html
@@ -203,6 +203,46 @@
 
             </div>
         </section>
+        <section class="px-8 pb-20 lg:px-32 lg:pb-32">
+            <div class="stat-container flex flex-col-reverse lg:flex-row justify-center lg:justify-between gap-14">
+                <div class="stat flex gap-5 flex-col w-full lg:w-2/5">
+                    <div
+                        class="card  card flex gap-4 lg:justify-start justify-center flex-col lg:flex-row items-center">
+                        <img class="w-14 object-contain" src="assets/icons/penguin-fashion/image 12.png" alt="">
+                        <div class="text-stat">
+                            <h2 class="text-[#363958] font-bold text-xl text-center lg:text-left">Find the Perfect Fit
+                            </h2>
+                            <p class="text-[#3E3E3E] text-sm text-center lg:text-left">Everybody is different, which is
+                                why we
+                                offer styles for every body.</p>
+                        </div>
+                    </div>
+                    <div class="card flex gap-8 lg:justify-start justify-center flex-col lg:flex-row items-center">
+                        <img class="w-14 object-contain" src="assets/icons/penguin-fashion/image 13.png" alt="">
+                        <div class="text-stat ">
+                            <h2 class="text-[#363958] font-bold text-xl text-center lg:text-left">Free Exchanges</h2>
+                            <p class="text-[#3E3E3E] text-sm text-center lg:text-left">One of the many reasons you can
+                                shop
+                                with peace of mind.</p>
+                        </div>
+                    </div>
+                    <div class="card flex gap-4 lg:justify-start justify-center flex-col lg:flex-row items-center">
+                        <img class="w-14 object-contain" src="assets/icons/penguin-fashion/image 14.png" alt="">
+                        <div class="text-stat">
+                            <h2 class="text-[#363958] font-bold text-xl text-center lg:text-left">Contact Our Seller
+                            </h2>
+                            <p class="text-[#3E3E3E] text-sm text-center lg:text-left">They are here to help you. That's
+                                quite
+                                literally what we pay them for.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <img class="w-full lg:w-[45%] object-contain" src="assets/images/shopping.png" alt="">
+
+            </div>
+
+        </section>
     </main>
 </body>
 
