nav section responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="px-8 pb-20 lg:px-32 lg:pb-32">
-        <nav class="flex justify-between  items-center py-7">
+        <nav class="flex flex-col gap-5 lg:gap-0 lg:flex-row lg:justify-between  items-center py-7">
             <div class="logo-container">
                 <img class="h-9 object-cover" src="/assets/icons/logo.png" alt="">
             </div>
